--- a/trackme/src/app.html
+++ b/trackme/src/app.html
@@ -8,7 +8,7 @@
 	</head>
 	<body
 		data-sveltekit-preload-data="hover"
-		class="min-h-screen flex flex-col text-neutral-900 bg-white dark:bg-neutral-900 dark:text-white"
+		class="min-h-screen flex flex-col text-neutral-900 bg-neutral-100 dark:bg-neutral-900 dark:text-white"
 	>
 		<div class="contents">%sveltekit.body%</div>
 	</body>
