--- a/ui/src/app.html
+++ b/ui/src/app.html
@@ -5,6 +5,15 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+		<script nonce="%sveltekit.nonce%">
+		  // Defer PWA installation prompt
+			window.addEventListener('beforeinstallprompt', event => {
+				event.preventDefault()
+				window.deferredInstallPrompt = event
+			})
+		</script>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
